modal bug fix: z-index

--- a/src/Modal.css
+++ b/src/Modal.css
@@ -12,6 +12,7 @@
   background-color: rgba(0, 0, 0, 0.61);
   width: 100%;
   height: 100%;
+  z-index: 999;
 }
 
 .clear-all-modal-box {
